--- a/client/src/pages/Home/FirstNamingPlatformList/FirstNamingPlatformList.module.sass
+++ b/client/src/pages/Home/FirstNamingPlatformList/FirstNamingPlatformList.module.sass
@@ -1,12 +1,18 @@
 .namingPlatformListContainer
-  max-width: 980px
+  max-width: 1140px
   width: 100%
-  
+
+  h2
+    font-weight: 700
+    font-family: "Product Sans",sans-serif
+    line-height: 1.3
+    color: #000
+
 .namingPlatformList
   display: flex
   flex-wrap: wrap
 
-  li 
+  li
     box-sizing: border-box
     width: 25%
     padding: 10px
@@ -14,16 +20,30 @@
     @media screen and (max-width:850px)
       width: 50%
 
-.namingPlatformArticle 
-  box-sizing: border-box 
-  width: 100%
+.namingPlatformArticle
+  box-sizing: border-box
   display: flex
   flex-direction: column
   align-items: center
   text-align: center
-  padding: 30px
+  width: 100%
+  height: 100%
+  margin-bottom: 30px
+  padding: 20px
   box-shadow: 0 0 5px lightgrey
   border-radius: 20px
-  height: 100%
- 
+
+  img
+    margin-bottom: 10px
+
+  h3
+    font-size: 26px
+    font-weight: 700
+    margin: 0 0 13px 0
+    line-height: 1.2
+
+  p
+    margin: 0
+    font-weight: 400
+    min-height: 60px
 // h2, h3 брати зі стилів проєкту
