--- a/client/src/pages/Pricing/Pricing.module.sass
+++ b/client/src/pages/Pricing/Pricing.module.sass
@@ -1,7 +1,69 @@
-.body 
+.container
+  box-sizing: border-box
+  display: flex
+  flex-wrap: wrap
+  margin: 60px auto
+  font-family: 'Raleway',sans-serif
+
+  @media screen and (min-width: 768px)
+    width: 750px
+
+  @media screen and (min-width: 992px)
+    width: 970px
+
+  @media screen and (min-width: 1200px)
+    width: 1170px
+
+  li
+    box-sizing: border-box
+    width: 25%
+    padding: 0 10px
+
+    @media screen and (min-width: 992px)
+      padding: 0 15px
+
+.topBox
+  box-sizing: border-box
+  display: inline-block
+  width: 100%
+  min-height: 215px
+  margin-bottom: 15px
+  padding: 16px
+  overflow: hidden
+  background-color: #fff
+
+  h3
+    margin: 0 0 10px 0
+    font-size: 33px
+    font-weight: 700
+
+  p
+    color: #666
+    font-size: 16px
+    font-weight: 500
+    min-height: 75px
+    margin: 0
+
+  span
+    display: block
+    width: 100%
+    text-align: right
+    font-size: 28px
+
+.topBox:hover
+  box-shadow: 0px 5px 5px 5px rgba(21, 21, 21, 0.476)
+
+.body
   position: relative
-  width: 300px
-  
+  max-width: 300px
+  font-size: 15px
+  font-weight: 500
+  padding: 13px 0
+  border-bottom: 2px solid #ddd
+
+  &:last-child
+    border-bottom: none
+
   &::after,&::before
     position: absolute
     left: 100%
@@ -12,7 +74,7 @@
     transition: 1s
 
   &::after
-    content: attr(data-tooltip)  
+    content: attr(data-tooltip)
     padding: 20px
     opacity: 0
     z-index: 99
@@ -28,4 +90,13 @@
     $size: 5px
     width: $size
     height: $size
-    
+
+.btn
+  display: block
+  width: 100%
+  font-weight: 700
+  font-size: 17px
+  line-height: 45px
+  border-radius: 5px
+  text-align: center
+  color: white
